fix [#36005] viewport rendering crashes blender